gccida/c1/ldst_entry
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ldst_entry/src/gcse.c:6368:17: error: expected identifier or '('
 struct ls_expr = first_ls_expr( ); 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ldst_entry/src/gcse.c:6369:7: error: expected expression
if (  struct ls_expr ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ldst_entry/src/gcse.c:6389:12: error: expected expression
*( _OWORD *)&v2->loads = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ldst_entry/src/gcse.c:6389:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v2->loads = 0LL; 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ldst_entry/src/obj/gcse.o] Error 1
